wifi: support the rtl8822cs [2/3]
PD#SWPL-5422

Problem:
not support rtl8822cs

Solution:
add rtl8822cs support

Verify:
ampere

Change-Id: Iaabeadfd3dce807f31276b4ba23e780d51c5eaa7

--- a/rtl88x2CS/Makefile
+++ b/rtl88x2CS/Makefile
@@ -948,7 +948,7 @@ ifeq ($(CONFIG_PCI_HCI), y)
 MODULE_NAME = 88x2ce
 endif
 ifeq ($(CONFIG_SDIO_HCI), y)
-MODULE_NAME = 88x2cs
+MODULE_NAME = 8822cs
 endif
 
 endif
